--- a/assets/app/app.component.html
+++ b/assets/app/app.component.html
@@ -1,1 +1,6 @@
-<h1>Hello World!</h1> 
+
+<p><app-header></app-header></p>
+<div class="card text-center">
+    <app-cursos></app-cursos>
+    <app-cadastros></app-cadastros>
+</div>
