--- a/assets/app/cadastro/cadastro.component.html
+++ b/assets/app/cadastro/cadastro.component.html
@@ -1,30 +1,27 @@
-
-
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
 
-<div class="card">
-    <h1 class="display-4">Cadastro de Usuário</h1>
+<div class="card-body text-center">
+    <h3 class="card-title">Cadastro de Usuário</h3>
     </div>
-    <div class="card">
+    <div class="card text-center">
     <form action="/cadastro" method="post"> <br>
-        <p class="lead">
-            <label for="nome" class="form-label">Nome: </label>
+        <p class="card-text">
+            <label for="nome" class="form-label">Nome </label> <br>
                 <input type="text" name="firstNameBody" placeholder="Nome"> <br>
-            <label for="sobrenome" class="form-label">Sobrenome: </label>
+            <label for="sobrenome" class="form-label">Sobrenome </label> <br>
                 <input type="text" name="lastNameBody" placeholder="Sobrenome"> <br>
-            <label for="dataNascimento" class="form-label">Data de Nascimento: </label>
+            <label for="dataNascimento" class="form-label">Data de Nascimento </label> <br>
                 <input type="date" name="dataNascimentoBody" placeholder="Data de Nascimento"> <br>
-            <label for="email" class="form-label">E-mail: </label>
+            <label for="email" class="form-label">E-mail </label> <br>
                 <input type="text" name="emailBody" placeholder="email@email.com"> <br>
-            <label for="senha" class="form-label">Senha: </label>
+            <label for="senha" class="form-label">Senha </label> <br>
                 <input type="password" name="passwordBody" placeholder="Senha"> <br>
-            <label for="telefone" class="form-label">Telefone: </label>
+            <label for="telefone" class="form-label">Telefone </label> <br>
                 <input type="tel" name="telefoneBody" placeholder="Telefone"> <br>
-            <label for="idNumber" class="form-label">Matrícula: </label>
+            <label for="idNumber" class="form-label">Matrícula </label> <br>
                 <input type="number" name="idNumberBody" placeholder="Matrícula"> <br>
-        <button  class="btn btn-success mt-8" type="submit">Cadastrar Usuário</button>
+            <button  class="btn btn-success mt-8" type="submit">Cadastrar Usuário</button>
         </p>
     </form>
 </div>
-
