--- a/assets/app/cadastro/cadastro.component.html
+++ b/assets/app/cadastro/cadastro.component.html
@@ -21,7 +21,7 @@
                 <input type="tel" name="telefoneBody" placeholder="Telefone"> <br>
             <label for="idNumber" class="form-label">Matrícula </label> <br>
                 <input type="number" name="idNumberBody" placeholder="Matrícula"> <br>
-            <button  class="btn btn-success mt-8" type="submit">Cadastrar Usuário</button>
+            <button  class="btn btn-dark mt-8" type="submit">Cadastrar Usuário</button>
         </p>
     </form>
 </div>
