--- a/assets/app/curso/curso.component.html
+++ b/assets/app/curso/curso.component.html
@@ -14,7 +14,7 @@
             <label for="text" class="form-label">Carga Horária </label><br>
                 <input type="text" name="cargaHorariaBody" placeholder="ex: 80"> <br>
             
-        <button  class="btn btn-success " type="submit">Cadastrar Disciplina</button>
+        <button  class="btn btn-dark " type="submit">Cadastrar Disciplina</button>
         </p>
     </form>
 </div>
